<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="mode">
        <item>Andijon viloyati</item>
        <item>Buxoro viloyati</item>
        <item>Jizzax viloyati</item>
        <item>Qashqadaryo viloyati</item>
        <item>Navoiy viloyati</item>
        <item>Namangan viloyati</item>
        <item>Samarqand viloyati</item>
        <item>Surxondaryo viloyati</item>
        <item>Sirdaryo viloyati</item>
        <item>Farg‘ona viloyati</item>
        <item>Xorazm viloyati</item>
        <item>Qoraqalpog‘iston Respublikasi</item>
        <item>Toshkent shahar</item>
    </string-array>
    <string name="prompt">Select Mode</string>
    <string name="app_name">eAnticor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_phone_number">Kirish yoki ro‘yxatdan o‘tish uchun telefon raqamingizni kiriting</string>
    <string name="please_input_code">Sizning raqamingizga tasdiqlash kodi yuborildi. Iltimos, kodni kiriting</string>
    <string name="sign">Kirish</string>
    <string name="confirm">Tasdiqlash</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="please_input_all_fields">Iltimos hamma maydonlarni to‘ldiring.</string>
    <string name="register_order">Yuborish</string>
    <string name="contact_data">Mijoz ma’lumotlari</string>
    <string name="fullname">Ismi sharifingiz</string>
    <string name="fullname_">Ismi sharifi:</string>
    <string name="phone">Telefon raqam</string>
    <string name="phone_">Telefon raqam:</string>
    <string name="comment">Izoh</string>
    <string name="your_data">Asosiy</string>
    <string name="edit">O‘zgartirish</string>
    <string name="success">Sizning arizangiz yuborildi</string>
    <string name="code">Kod</string>
    <string name="your_order_accept">Sizning buyurtmangiz muvaffaqiyatli yuborildi. Buyurtmaning holatini buyurtmalar oynasidan kuzatib borishingiz mumkun.</string>
    <string name="exit_main_page">Asosiy oynaga qaytish</string>
    <string name="swap_language">Tilni o‘zgartirish</string>
    <string name="notifications">Bildirishnomalar</string>
    <string name="language">Tilni o‘zgartirish</string>
    <string name="share">Ulashish</string>
    <string name="about_app">Ilova haqida</string>
    <string name="logout">Chiqish</string>
    <string name="current_store">MUROJAAT</string>
    <string name="catgory1">Poraxo‘rlikka duch keldim va pora berdim</string>
    <string name="category2">Poraxo‘rlikka duch keldim, lekin pora to‘lamaganman.Men korrupsiyaga qarshiman</string>
    <string name="category3">Poraxo‘rlik bilan bog‘liq bo‘lmagan korrupsiya turiga duch keldim</string>
    <string name="category4">Men bir davlat agentligi halol xodimi bilan uchrashdim</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="news">Yangiliklar</string>
    <string name="wishlist">Statistika</string>
    <string name="title">O‘zbekiston Respublikasi Korrupsiyaga qarshi kurashish agentligi</string>
    <string name="murojaat">Yuborgan ma\'lumotlaringiz va shaxsingiz sir saqlanishi davlat tomonidan kafolatlanadi</string>
    <string name="dashboard">Xabar berish</string>
    <string name="account">FAQ</string>
    <string name="tashkilot">Korrupsiya holati qayd etilgan tashkilot nomi:</string>
    <string name="hudud">Hududni tanlang</string>
    <string name="murojaat_matni">Murojaat matni</string>
    <string name="pora_hajmi">Pora qiymati</string>
    <string name="murojat_mazmuni">Murojaat mazmuni</string>
    <string name="shahar">Korrupsiya holati sodir bo`lgan hudud nomi:</string>
    <string name="zayavka">Ariza yuborish</string>
    <string name="murojaat1">Murojaat</string>
    <string name="murojaat2">Ko\'p beriladigan savollar</string>
    <string name="auth">Avtorizatsiya</string>
    <string name="Обращение">Murojaat</string>
    <string name="oneid">OneID</string>
    <string name="agentlik">Agentlik shaxsi noma\'lum murojaatlarni ko\'rib chiqmasligi mumkin. Ro\'yxatdan o\'tishni tavsiya qilamiz</string>
    <string name="savollar">Savollar</string>
    <string name="your_Data">Sizning savollaringiz</string>
    <string name="download">Yuklab olish</string>
    <string name="please_update_app">Iltimos, ilovaning yangi versiyasini yuklab oling!</string>
    <string name="refreshed">Yangilandi.</string>
    <string name="call_me">Biz bilan bog‘lanish</string>
    <string name="store_or_man_name">Дукон ёки корхона номи</string>
    <string name="please_select_region">Iltimos tumanni tanlang.</string>
    <string name="ditrict">Tuman</string>
    <string name="region">Tuman nomi</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="not_network">Tarmoqda uzilish. Internet sozlamalarini tekshiring.</string>
    <string name="murojaatt">Ruxsatsiz foydalanuvchilarning murojaatlari anonim holatga ega bo\'ladi</string>
    <string name="qo_ng_iroq_markazi_1070">Qo\'ng\'iroq markazi: 1253</string>
    <string name="vapros">Savollar</string>
    <string name="text">Xabarni yozing</string>
    <string name="shaxs_turi">Shaxs turini tanlang</string>
    <string name="created_by">Created by</string>
    <string name="russkiy">Русский</string>
    <string name="shaxsturi">Шахс турини танланг</string>
    <string name="todo">TODO</string>
    <string name="fiz_litso">Физ. лицо</string>
    <string name="sum">Валюта / Сум</string>
    <string name="shaharlar">Shaharlar</string>
    <string name="қутв">Yuborish</string>
    <string name="error">Hatolik, maydonlarni to\'ldirib qayta urinib ko\'ring</string>
    <string name="savol1">Korrupsiya nima ?</string>
    <string name="korish">Ko\'rish</string>
    <string name="savol2">Nimalar pora predmeti bo\'ladi?</string>
    <string name="javob2">Pul, qimmatbaho qog‘ozlar, moddiy boyliklar, shuningdek, pora oladiganga qaytarmaslik sharti bilan, lekin mulkiy mohiyatga molik bo‘lgan (masalan, ta’mirlash, qurilish, qayta tiklash ishlarini bajarish va boshqalar) xizmatlar pora predmeti bo‘lishi mumkin.
Manba: Oliy sudi Plenumining 19-son qarori</string>
    <string name="savol3">Korrupsiya bilan bog\'liq huquqbuzarliklarning bir qismi nima?</string>
    <string name="javob3">korrupsiya belgilariga ega bo\'lgan holda, qonunchilikda uning bajarilishi uchun javobgarlikni nazarda tutuvchi harakat korruptsiya xarakterining buzilishi hisoblanadi.</string>
    <string name="savol4">Manfaatlar to‘qnashuviga duch kelganda davlat xizmatchisi qanday yo‘l tutishi lozim?</string>
    <string name="javob4">davlat xizmatchilari o‘z rahbarini yoxud huquqni muhofaza qiluvchi organlarini ularni huquqbuzarliklar sodir etishga og‘dirish maqsadida biror-bir shaxslarning qilgan murojaatlarining barcha holatlari to‘g‘risida, shuningdek boshqa davlat xizmatchilari tomonidan sodir etilgan huquqbuzarliklarning o‘zlariga ma’lum bo‘lgan har qanday holatlari haqida xabardor qilishi shart. Manba: Vazirlar Maxkamasining 2016-yil 2-martdagi 62-sonli Qarori</string>
    <string name="_1_4">1....4</string>
    <string name="fizLitso">Jismoniy shaxs</string>
    <string name="yurLitso">Yuridik shaxs</string>
    <string name="dollar">Dollar</string>
    <string name="summ">Sum</string>
    <string name="rubl">Rubl</string>
    <string name="tenge">Tenge</string>
    <string name="button1">Poraxo\'rlikka duch keldim va pora berishga majbur bo\'ldim</string>
    <string name="button2">Poraxo\'rlikka duch keldim va pora bermadim</string>
    <string name="button3">Pora berishga bog\'liq bo\'lmagan korrupsiyaga duch keldim</string>
    <string name="button4">Halol ishlaydigan davlat xizmatchisini uchratdim</string>
    <string name="javob1">korruptsiya - bu shaxsdan o\'z martabasi yoki xizmatidan moddiy yoki nomoddiy manfaatlar yoki boshqalarning manfaatlarini ko\'zlab g\'ayriqonuniy ravishda foydalanishi, shuningdek, bunday ne\'matlarni qonunga xilof ravishda taqdim etishi. Manba: O‘zbekiston Respublikasining “Korrupsiyaga qarshi kurashish to‘g‘risida”gi qonuni</string>
    <string name="profit_devs_group">INNOVATIVE WEB IDEA</string>
    <string name="valyuta">Valyuta</string>
    <string name="yevro">Yevro</string>
    <string name="o_zbek">O\'zbek</string>
    <string name="ilova_test_rejimida_ishlamoqda">Ilova test rejimida ishlamoqda</string>
    <string name="Yopish">Yopish</string>
    <string name="kurish">Ko\'rish</string>
    <string name="errorrrr">Error</string>
    <string name="show_massage">Siz One ID dan muvaffaqiyatli o\'tdingiz</string>
    <string name="Chiqish">Chiqish</string>
    <string name="chiqmoqchimisiz">Siz platformadan chiqmoqchimisiz?</string>
    <string name="one_id">Siz avval One ID dan ro\'yxatdan o\'tishingiz kerak</string>
    <string name="successs">Murojaat qabul qilindi</string>
</resources>