<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".screen.main.send.detail.SendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgBackk"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow_back_black_24dp"
                app:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/zayavka"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/shahar"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_region"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/region"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_area"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/tashkilot"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_org"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    tools:context="info.hoang8f.android.segmented.SampleActivity$PlaceholderFragment">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">



                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:minWidth="80dp">

                            <info.hoang8f.android.segmented.SegmentedGroup
                                android:id="@+id/button_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_margin="10dp"
                                android:orientation="vertical"
                                app:sc_checked_text_color="@color/white"
                                segmentedgroup:sc_border_width="1dp"
                                segmentedgroup:sc_corner_radius="4dp"
                                segmentedgroup:sc_tint_color="@color/colorAccent">

                                <RadioButton
                                    android:id="@+id/button_type_1"
                                    style="@style/RadioButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="7dp"
                                    android:text="@string/button1"
                                    android:textAlignment="textStart"
                                    android:textSize="14sp"
                                    android:checked="true"/>

                                <RadioButton
                                    android:id="@+id/button_type_2"
                                    style="@style/RadioButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="7dp"
                                    android:text="@string/button2"
                                    android:textAlignment="textStart"
                                    android:textSize="14sp"/>

                                <RadioButton
                                    android:id="@+id/button_type_3"
                                    style="@style/RadioButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="7dp"
                                    android:text="@string/button3"
                                    android:textAlignment="textStart"
                                    android:textSize="14sp" />

                                <RadioButton
                                    android:id="@+id/button_type_4"
                                    style="@style/RadioButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="7dp"
                                    android:text="@string/button4"
                                    android:textAlignment="textStart"
                                    android:textSize="14sp" />


                            </info.hoang8f.android.segmented.SegmentedGroup>

                        </RelativeLayout>
                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/valyuta"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">



                        <info.hoang8f.android.segmented.SegmentedGroup
                            android:id="@+id/currency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal"
                            app:sc_checked_text_color="@color/white"
                            segmentedgroup:sc_border_width="1dp"
                            segmentedgroup:sc_corner_radius="4dp"
                            segmentedgroup:sc_tint_color="@color/colorAccent">

                            <RadioButton
                                android:id="@+id/dollar"
                                style="@style/RadioButton"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:checked="true"
                                android:text="@string/summ" />

                            <RadioButton
                                android:id="@+id/sum"
                                style="@style/RadioButton"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/dollar" />

                            <RadioButton
                                android:id="@+id/rubl"
                                style="@style/RadioButton"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/rubl" />

                            <RadioButton
                                android:id="@+id/tenge"
                                style="@style/RadioButton"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/tenge" />

                            <RadioButton
                                android:id="@+id/evro"
                                style="@style/RadioButton"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/yevro" />
                        </info.hoang8f.android.segmented.SegmentedGroup>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhone"
                        style="@style/EditTextBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/amount"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:inputType="number"
                            android:maxLength="9"
                            android:hint="@string/pora_hajmi"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditTextBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edComment"
                            android:layout_width="match_parent"
                            android:layout_height="116dp"
                            android:layout_marginTop="16dp"
                            android:autofillHints=""
                            android:gravity="top"
                            android:hint="@string/murojaat_matni"
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical"
                            android:scrollHorizontally="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/name" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/gray_text" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/send"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="1dp"
                        app:contentPadding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/қутв"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</FrameLayout>